tests/baselines/reference/parser642331_1.errors.txt
==== tests/cases/compiler/parser642331_1.ts (1 errors) ====
    "use strict";
    
    class test {
        constructor (static) { }
                           ~
!!! parser642331_1.ts(4,24): error TS1003: Identifier expected.
    }
    